<resources>
    <string name="app_name">TwitterApp</string>
    <string name="title_tweet">Tweet</string>
    <string name="title_timeline">TimeLine</string>
    <string name="title_prefs">Preferences</string>
    <string name="title_about">About</string>


    <!-- Preferences -->
    <string name="prefs_title_handle">Account</string>
    <string name="prefs_key_handle">PREFS.HANDLE</string>
    <string name="prefs_title_passwd">Password</string>
    <string name="prefs_key_passwd">PREFS.PASS</string>
    <string name="prefs_title_uri">Endpoint</string>
    <string name="prefs_key_uri">PREFS.URI</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet_hint">Please enter text to tweet</string>
    <string name="title_contacts">Contacts</string>
    <string name="tweet_sent">Tweet Sent</string>
    <string name="tweet_failed">Tweet Failed</string>
</resources>
